--- a/.github/workflows/extended.yml
+++ b/.github/workflows/extended.yml
@@ -79,9 +79,6 @@ jobs:
 
   cmake_wine:
     runs-on: ubuntu-latest
-    env:
-      CC: x86_64-w64-mingw32-gcc
-      CXX: x86_64-w64-mingw32-g++
     steps:
       - name: Install tools
         run: sudo apt-get install -y mingw-w64 wine64
@@ -89,15 +86,11 @@ jobs:
         uses: actions/checkout@main
       - name: Configure
         run: >
-          cmake
-          -B build
-          -S .
-          -D CMAKE_SYSTEM_NAME=Windows
-          -D CMAKE_CROSSCOMPILING_EMULATOR=wine
+          cmake --preset MinGW
       - name: Build
-        run: cmake --build build --verbose
+        run: cmake --build cpputest_build --verbose
       - name: Test
-        run: ctest --test-dir build
+        run: ctest --test-dir cpputest_build
 
   cmake_no_exceptions:
     runs-on: ubuntu-latest
