--- a/.github/workflows/extended.yml
+++ b/.github/workflows/extended.yml
@@ -31,14 +31,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@main
       - name: Configure
-        run: >
-          cmake
-          -S .
-          -B cpputest_build
-          -D CMAKE_BUILD_TYPE=Debug
-          -D CMAKE_CXX_STANDARD=11
-          -D CPPUTEST_COVERAGE=ON
-          -D CPPUTEST_EXAMPLES=OFF
+        run: cmake --preset coverage
       - name: Build
         run: cmake --build cpputest_build
       - name: Test
