--- a/tests/CppUTest/CMakeLists.txt
+++ b/tests/CppUTest/CMakeLists.txt
@@ -52,6 +52,15 @@ endif()
 cpputest_normalize_test_output_location(CppUTestTests)
 target_link_libraries(CppUTestTests PRIVATE ${CppUTestLibName})
 
+if(CMAKE_VERSION VERSION_GREATER_EQUAL "3.13")
+    target_link_options(CppUTestTests
+        PRIVATE
+            $<$<CXX_COMPILER_ID:GNU,Clang>:LINKER:-Map=$<TARGET_FILE:CppUTestTests>.map>
+            "$<$<CXX_COMPILER_ID:MSVC>:/MAP>"
+            $<$<CXX_COMPILER_ID:IAR>:"SHELL:--map $<TARGET_FILE:CppUTestTests>.map">
+    )
+endif()
+
 if (CPPUTEST_TEST_DISCOVERY)
     cpputest_buildtime_discover_tests(CppUTestTests)
 endif()
