--- a/src/CppUTest/CMakeLists.txt
+++ b/src/CppUTest/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(${CppUTestLibName}
+add_library(CppUTest
         CommandLineArguments.cpp
         MemoryLeakWarningPlugin.cpp
         TestHarness_c.cpp
@@ -49,11 +49,11 @@ add_library(${CppUTestLibName}
 
 #[[Set CPPUTEST_PLATFORM in a parent CMakeLists.txt if reusing one of the provided platforms, else supply the missing definitions]]
 if(CPPUTEST_PLATFORM)
-    target_sources(${CppUTestLibName}
+    target_sources(CppUTest
         PRIVATE
             ${CMAKE_CURRENT_LIST_DIR}/../Platforms/${CPPUTEST_PLATFORM}/UtestPlatform.cpp
     )
-    target_include_directories(${CppUTestLibName}
+    target_include_directories(CppUTest
         PUBLIC
             $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/../../include/Platforms/${CPPUTEST_PLATFORM}>
     )
@@ -65,13 +65,13 @@ if (MINGW)
 endif()
 
 #[[Arrange for the include directory to be added to the include paths of any CMake target depending on CppUTest.]]
-target_include_directories(${CppUTestLibName}
+target_include_directories(CppUTest
     PUBLIC
         $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
 )
 
-target_compile_definitions(${CppUTestLibName}
+target_compile_definitions(CppUTest
     PRIVATE
         $<$<BOOL:${CPPUTEST_USE_SECURE_STDLIB}>:STDC_WANT_SECURE_LIB>
         # Apply workaround for MinGW timespec redefinition (pthread.h / time.h).
@@ -81,13 +81,13 @@ target_compile_definitions(${CppUTestLibName}
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads)
 
-target_link_libraries(${CppUTestLibName}
+target_link_libraries(CppUTest
     PRIVATE
         $<$<BOOL:${WIN32}>:winmm>
         $<$<BOOL:${CMAKE_USE_PTHREADS_INIT}>:${CMAKE_THREAD_LIBS_INIT}>
 )
 
-add_library(CppUTest::CppUTest ALIAS ${CppUTestLibName})
+add_library(CppUTest::CppUTest ALIAS CppUTest)
 
 if(NOT CPPUTEST_MEM_LEAK_DETECTION_DISABLED)
     if(MSVC)
@@ -97,7 +97,7 @@ if(NOT CPPUTEST_MEM_LEAK_DETECTION_DISABLED)
     else()
         set(force_include "-include")
     endif()
-    target_compile_options(${CppUTestLibName}
+    target_compile_options(CppUTest
         PUBLIC
             "$<$<COMPILE_LANGUAGE:C,CXX>:${force_include}CppUTest/MemoryLeakDetectorMallocMacros.h>"
             "$<$<COMPILE_LANGUAGE:CXX>:${force_include}CppUTest/MemoryLeakDetectorNewMacros.h>"
@@ -107,7 +107,7 @@ endif()
 # Installation
 if(PROJECT_IS_TOP_LEVEL)
     install(
-        TARGETS ${CppUTestLibName}
+        TARGETS CppUTest
         EXPORT CppUTestTargets
         LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
         ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
