Consolidate warning flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,6 +126,9 @@ if(NOT PROJECT_IS_TOP_LEVEL)
 endif()
 
 include(CppUTestConfigurationOptions)
+if(PROJECT_IS_TOP_LEVEL)
+  include(CppUTestWarningFlags)
+endif()
 include(CppUTestBuildTimeDiscoverTests)
 include(CppUTestNormalizeTestOutputLocation)
 include(GNUInstallDirs)
