--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -77,6 +77,9 @@ jobs:
           - name: GTest 1.8
             os: ubuntu-20.04
             target: check_gtest18
+          - name: GTest 1.10
+            os: ubuntu-20.04
+            target: check_gtest110
           - name: Disable long long
             os: ubuntu-latest
             configure_args: --disable-longlong
