test with gtest 1.11

--- a/Makefile.am
+++ b/Makefile.am
@@ -260,6 +260,13 @@ if INCLUDE_CPPUTEST_EXT
 	./$(CPPUTESTEXT_TESTS)
 endif
 
+
+cpputest_build_gtest111:
+	mkdir -p cpputest_build_gtest111
+	cd cpputest_build_gtest111; \
+	wget https://github.com/google/googletest/archive/refs/tags/release-1.11.0.zip -O gtest-1.11.0.zip  && unzip gtest-1.11.0.zip; \
+	cd googletest-release-1.11.0; cmake .; make
+
 cpputest_build_gtest110:
 	mkdir -p cpputest_build_gtest110
 	cd cpputest_build_gtest110; \
@@ -323,14 +330,21 @@ check_gtest110: cpputest_build_gtest110
 	export GTEST_HOME=`pwd`/cpputest_build_gtest110/googletest-release-1.10.0; \
 	make distclean; $(srcdir)/configure --enable-std-cpp11; make check
 
+check_gtest111: cpputest_build_gtest111
+	@echo "Build using gmock 1.11"
+	export GMOCK_MOCK=`pwd`/cpputest_build_gtest111/googletest-release-1.11.0; \
+	export GTEST_HOME=`pwd`/cpputest_build_gtest111/googletest-release-1.11.0; \
+	make distclean; $(srcdir)/configure --enable-std-cpp11; make check
+
 remove_gtest_directories:
 	rm -rf cpputest_build_gtest15
 	rm -rf cpputest_build_gtest16
 	rm -rf cpputest_build_gtest17
 	rm -rf cpputest_build_gtest18
 	rm -rf cpputest_build_gtest110
+	rm -rf cpputest_build_gtest111
 
-check_gtest: remove_gtest_directories check_gtest15 check_gtest16 check_gtest17 check_gtest18 check_gtest110
+check_gtest: remove_gtest_directories check_gtest15 check_gtest16 check_gtest17 check_gtest18 check_gtest110 check_gtest111
 
 check_basic:
 	@echo "If dash is available, run the configure with dash to find bash-isms and increase portability"
