--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -80,6 +80,9 @@ jobs:
           - name: GTest 1.10
             os: ubuntu-20.04
             target: check_gtest110
+          - name: GTest 1.11
+            os: ubuntu-20.04
+            target: check_gtest111
           - name: Disable long long
             os: ubuntu-latest
             configure_args: --disable-longlong
