Allow detailed tests to be set at call site
When `DETAILED` is passed to `cpputest_buildtime_discover_tests`, that
value will take precedence over the `CPPUTEST_TESTS_DETAILED` variable.

For the following invocations:

```cmake
cpputest_buildtime_discover_tests(A)
cpputest_buildtime_discover_tests(B DETAILED TRUE)
cpputest_buildtime_discover_tests(C DETAILED FALSE)
```

- When `CPPUTEST_TESTS_DETAILED` is falsey, _B_ tests will be detailed.
- When `CPPUTEST_TESTS_DETAILED` is truthy, _A_ and _B_ tests will be
  detailed.

This is useful in cases like `TestOrderedTestMacros`, which fail
when run in detailed-mode.

--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -96,6 +96,10 @@ jobs:
             os: ubuntu-latest
             cpp_version: 98
             preset: no-long-long
+          - name: Detailed
+            os: ubuntu-latest
+            cpp_version: 98
+            preset: detailed
           - name: Linux GNU Install
             os: ubuntu-latest
             cpp_version: 11
