--- a/tests/CppUTestExt/CMakeLists.txt
+++ b/tests/CppUTestExt/CMakeLists.txt
@@ -54,5 +54,8 @@ if(CMAKE_VERSION VERSION_GREATER_EQUAL "3.13")
 endif()
 
 if (CPPUTEST_TEST_DISCOVERY)
-    cpputest_buildtime_discover_tests(CppUTestExtTests)
+    cpputest_buildtime_discover_tests(CppUTestExtTests
+        # TestOrderedTestMacros must run together
+        DETAILED FALSE
+    )
 endif()
