Cleanup GMock usage

--- a/tests/CppUTestExt/CMakeLists.txt
+++ b/tests/CppUTestExt/CMakeLists.txt
@@ -36,6 +36,12 @@ if(CPPUTEST_STD_C_LIB_DISABLED)
     )
 endif()
 
+find_package(GTest)
+if(GTEST_FOUND)
+    target_compile_definitions(CppUTestExtTests PRIVATE INCLUDE_GTEST_TESTS)
+    target_link_libraries(CppUTestExtTests PRIVATE ${GTEST_LIBRARIES})
+endif()
+
 if(MINGW)
     set(THREADS_PREFER_PTHREAD_FLAG ON)
     find_package(Threads)
