Remove test output "normalization"
This is broken for multi-configuration generators.  Debug and release
builds, for example, need to output to different paths and run tests
against those paths.  The current implementation would overwrite one
config's build with another and test that one, regardless of the config
the user is trying to test.

--- a/tests/CppUTestExt/CMakeLists.txt
+++ b/tests/CppUTestExt/CMakeLists.txt
@@ -37,7 +37,6 @@ if(MINGW)
     endif()
 endif()
 
-cpputest_normalize_test_output_location(CppUTestExtTests)
 target_link_libraries(CppUTestExtTests
     PRIVATE
         ${CppUTestLibName}
@@ -53,7 +52,8 @@ if(CMAKE_VERSION VERSION_GREATER_EQUAL "3.13")
     )
 endif()
 
-if (CPPUTEST_TEST_DISCOVERY)
+if(CPPUTEST_TEST_DISCOVERY)
+    include(CppUTestBuildTimeDiscoverTests)
     cpputest_buildtime_discover_tests(CppUTestExtTests
         # TestOrderedTestMacros must run together
         DETAILED FALSE
