--- a/tests/CppUTest/CMakeLists.txt
+++ b/tests/CppUTest/CMakeLists.txt
@@ -44,7 +44,6 @@ if(MINGW OR (${CMAKE_HOST_SYSTEM_NAME} MATCHES "OpenBSD"))
     endif()
 endif()
 
-cpputest_normalize_test_output_location(CppUTestTests)
 target_link_libraries(CppUTestTests PRIVATE ${CppUTestLibName})
 
 if(CMAKE_VERSION VERSION_GREATER_EQUAL "3.13")
@@ -56,6 +55,7 @@ if(CMAKE_VERSION VERSION_GREATER_EQUAL "3.13")
     )
 endif()
 
-if (CPPUTEST_TEST_DISCOVERY)
+if(CPPUTEST_TEST_DISCOVERY)
+    include(CppUTestBuildTimeDiscoverTests)
     cpputest_buildtime_discover_tests(CppUTestTests)
 endif()
