Move private CMake out of public module path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,9 +122,9 @@ if(NOT PROJECT_IS_TOP_LEVEL)
   set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" PARENT_SCOPE)
 endif()
 
-include(CppUTestConfigurationOptions)
+include(cmake/gmock.cmake)
 if(PROJECT_IS_TOP_LEVEL)
-  include(CppUTestWarningFlags)
+  include(cmake/warnings.cmake)
 endif()
 include(GNUInstallDirs)
 
