Create new CppUTest CMake module

--- a/tests/CppUTest/CMakeLists.txt
+++ b/tests/CppUTest/CMakeLists.txt
@@ -56,6 +56,6 @@ if(CMAKE_VERSION VERSION_GREATER_EQUAL "3.13")
 endif()
 
 if(CPPUTEST_TEST_DISCOVERY)
-    include(CppUTestBuildTimeDiscoverTests)
-    cpputest_buildtime_discover_tests(CppUTestTests)
+    include(CppUTest)
+    cpputest_discover_tests(CppUTestTests)
 endif()
