--- a/examples/AllTests/CMakeLists.txt
+++ b/examples/AllTests/CMakeLists.txt
@@ -23,9 +23,7 @@ target_link_libraries(ExampleTests
         CppUTest::CppUTestExt
 )
 
-include(CppUTestBuildTimeDiscoverTests)
 if(CPPUTEST_TEST_DISCOVERY OR NOT DEFINED CPPUTEST_TEST_DISCOVERY)
-    cpputest_buildtime_discover_tests(ExampleTests
-        DETAILED TRUE
-    )
+    include(CppUTest)
+    cpputest_discover_tests(ExampleTests)
 endif()
