--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -130,6 +130,10 @@ jobs:
             os: ubuntu-latest
             cpp_version: 98
             preset: no-rtti
+          - name: No Exceptions
+            os: ubuntu-latest
+            cpp_version: 98
+            preset: no-exceptions
           - name: No C Standard Library
             os: ubuntu-latest
             cpp_version: 98
